--- a/templates/index.html
+++ b/templates/index.html
@@ -133,7 +133,7 @@ nav{
 }
 nav li {
   display: inline;
-  align-text: center;
+ /* align-text: center;*/
   font-family: 'Bodoni Moda', serif;
 }
 .logo{
@@ -170,7 +170,7 @@ nav li {
 
 .nav-links{
   opacity: 0px;
-
+}
 .container{
  width:60px;
 }
